cmake_minimum_required(VERSION 3.26)
project(list)

set(CMAKE_CXX_STANDARD 17)

add_executable(list main.cpp
        element.h
        element.h
        List.h
        List.h
        list.cpp
        list.cpp
        Queue.cpp
        Queue.h
        iterator.h
        iterator.cpp
        vector.h
        vector.cpp)
